@@ -1,30 +1,32 @@
 Package: gmnl
 Type: Package
 Title: Multinomial Logit Models with Random Parameters
-Version: 1.1-3.1
-Date: 2015-11-06
+Version: 1.1-3.2
+Date: 2020-05-27
 Authors@R: c(person("Mauricio", "Sarrias", role = c("aut", "cre"),
-                    email = "msarrias86@gmail.com"),
+                    email = "msarrias86@gmail.com", 
+                    comment = c(ORCID = "0000-0001-5932-4817")),
              person("Ricardo", "Daziano", role = "aut",
                     email = "daziano@cornell.edu"),
              person("Yves", "Croissant", role = "ctb"))
 Description: An implementation of maximum simulated likelihood method for the
-    estimation of multinomial logit models with random coefficients.
+    estimation of multinomial logit models with random coefficients as presented by Sarrias and Daziano (2017) <doi:10.18637/jss.v079.i02>.
     Specifically, it allows estimating models with continuous heterogeneity
     such as the mixed multinomial logit and the generalized multinomial logit.
     It also allows estimating models with discrete heterogeneity such as the
     latent class and the mixed-mixed multinomial logit model.
-Depends: R (>= 3.2.1), maxLik, Formula
+Depends: R (>= 3.6.0), maxLik, Formula
 Imports: plotrix, msm, mlogit, truncnorm, stats, graphics, utils
-Suggests: AER, lmtest, car, memisc
-URL: https://msarrias.weebly.com/description.html
+Suggests: AER, lmtest, car, memisc, testthat
+URL: https://msarrias.com/description.html
 License: GPL (>= 2)
-RoxygenNote: 5.0.1
+RoxygenNote: 7.1.0
+Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2018-11-06 10:47:08 UTC; hornik
-Author: Mauricio Sarrias [aut, cre],
+Packaged: 2020-05-27 15:29:15 UTC; mauriciosarrias
+Author: Mauricio Sarrias [aut, cre] (<https://orcid.org/0000-0001-5932-4817>),
   Ricardo Daziano [aut],
   Yves Croissant [ctb]
 Maintainer: Mauricio Sarrias <msarrias86@gmail.com>
 Repository: CRAN
-Date/Publication: 2018-11-06 10:58:14 UTC
+Date/Publication: 2020-05-27 17:00:11 UTC
