@@ -1,21 +1,21 @@
-3bb6311e409f65ad4d4403a7b611e02d *DESCRIPTION
-2c507462984180d3c2c3e3d18e59021c *NAMESPACE
-96fc810590dc693ce75905ca794c27cc *R/glogitform.R
-9c66e27c5c8ab3bbb03e5d7bd1bdc612 *R/gmnl.R
+3d74e8fa4baba32836f8ca75bcf7502e *DESCRIPTION
+6fee7d081fb5f751b67f7e8bb917dcb0 *NAMESPACE
+492645ece908b77f80ccd402270d4529 *R/glogitform.R
+4a77b3720be64c43d47b328a252a392c *R/gmnl.R
 0d2855a8eec8fdda4eeaf2b43e28113b *R/gmnl.draws.R
-23a332b9ec334b5caa4a477585e0c0e9 *R/gmnl.logliks.R
-51f501ced7e04b426d711cc865a7c179 *R/gmnl.methods.R
+b8121d21d0240d5bdb0ae432c0afe465 *R/gmnl.logliks.R
+dffb16e65fb796030e98077cbf4083fc *R/gmnl.methods.R
 477e69fc4bb42bbc1bbfc609ae6190cc *R/gmnl.tools.R
 3f01c073c843d3a44d10b36d3bd1354b *inst/CITATION
-d398d5d7b2f173f536e3f81bc1955756 *inst/NEWS.Rd
-d6093c1a3a5861e620061b2b6131d7ba *man/AIC.gmnl.Rd
-bd1378dc25c24c6640c20a2b3df5fe8c *man/bread.gmnl.Rd
-2bb1464ab4baed05ef1319a2a582ff2a *man/cov.gmnl.Rd
-5140004a9d4aaabf4f321d8b166e7e6c *man/effect.gmnl.Rd
-55a46a455012de16fe4ad0490a43991c *man/estfun.gmnl.Rd
-ebc5a6c870befedeee935b89d422fe26 *man/gFormula.Rd
-2004960a3b37975fe759a0ff4f587ce6 *man/getSummary.gmnl.Rd
-1e07e1eaca64fcc5098464193120a67d *man/gmnl.Rd
-45661841735d01659a4c0210e93538f8 *man/plot.gmnl.Rd
-1aa7e9e3116789632d6eadb24ea4d70d *man/vcov.gmnl.Rd
-148a5cd34a41dd25efeb91da204dd217 *man/wtp.gmnl.Rd
+4d9463bbbd31528398b0727ce8e53392 *inst/NEWS.Rd
+02e5ad0e01e6b58004805a067bd41322 *man/AIC.gmnl.Rd
+cca08ee7f2c2efdfd1a50d5d4f609873 *man/bread.gmnl.Rd
+4545431c46cead0b34630fae22af5ecf *man/cov.gmnl.Rd
+5f75737a12ce096490810ed98a6dee46 *man/effect.gmnl.Rd
+d7997eb74a4483448020bd256f7b7b8a *man/estfun.gmnl.Rd
+5750a044a97dcfd6e4d69f79d3a711e3 *man/gFormula.Rd
+b8dd38336b1cf3bfc0aae35879a57028 *man/getSummary.gmnl.Rd
+0fed2f7c3366f5cd3ff83b4075f3f1ce *man/gmnl.Rd
+63aa77e78dd1701845605dc6180051bb *man/plot.gmnl.Rd
+2b11a8b7152c02a52e5edb2f829da11c *man/vcov.gmnl.Rd
+26bd931b56191bc6d4a98142b7970b57 *man/wtp.gmnl.Rd
