@@ -190,24 +190,8 @@ logLik.gmnl <- function(object,...){
 #' @param obj a \code{gmnl} object,
 #' @param alpha level of the confidence intervals,
 #' @param ... further arguments,
-#' 
 #' @details For more details see package \pkg{memisc}
-#' @examples
-#' ## Estimate MNL models
-#' data("TravelMode", package = "AER")
-#' library(mlogit)
-#' TM <- mlogit.data(TravelMode, choice = "choice", shape = "long", 
-#'                  alt.levels = c("air", "train", "bus", "car"), chid.var = "individual")
-#'                  
-#' mnl.1 <- gmnl(choice ~ wait + vcost + travel + gcost | 0, data = TM)
-#' mnl.2 <- gmnl(choice ~ wait + vcost                  | 0, data = TM) 
-#' 
-#' ## Table
-#' library(memisc)
-#' mtable("MNL 1"= mnl.1, "MNL 2" = mnl.2, 
-#'        summary.stats = c("N", "Log-likelihood", "BIC", "AIC"))
-#' @import stats
-#' @export getSummary.gmnl
+#' @export
 getSummary.gmnl <- function(obj, alpha = 0.05, ...){
   smry <- summary(obj)
   coef <- smry$CoefTable
@@ -223,6 +207,11 @@ getSummary.gmnl <- function(obj, alpha = 0.05, ...){
   list(coef = coef, sumstat = sumstat, contrasts = obj$contrasts,
        xlevels = NULL, call = obj$call)
 }
+
+#if (getRversion() >= "3.6.0") {
+#  S3method(memisc::getSummary, gmnl)
+#}
+
 
 #' Akaike's Information Criterion
 #' 
@@ -776,3 +765,4 @@ wtp.gmnl <- function(object, wrt =  NULL, digits = max(3, getOption("digits") - 
   cat(paste("\nWilligness-to-pay respect to: ", wrt, "\n\n"))
   printCoefmat(tablewtp, digits = digits)
 }
+
