@@ -25,4 +25,3 @@ For more information see \code{\link[sandwich]{bread}} from the package \pkg{san
 Zeileis A (2006), Object-oriented Computation of Sandwich 
 Estimators. Journal of Statistical Software, 16(9), 1--16.
 }
-
