@@ -1,8 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/gmnl.methods.R
 \name{cov.gmnl}
-\alias{cor.gmnl}
 \alias{cov.gmnl}
+\alias{cor.gmnl}
 \alias{se.cov.gmnl}
 \title{Functions for Correlated Random Parameters}
 \usage{
@@ -10,8 +10,7 @@ cov.gmnl(x, Q = NULL)
 
 cor.gmnl(x, Q = NULL)
 
-se.cov.gmnl(x, sd = FALSE, Q = NULL, digits = max(3, getOption("digits") -
-  2))
+se.cov.gmnl(x, sd = FALSE, Q = NULL, digits = max(3, getOption("digits") - 2))
 }
 \arguments{
 \item{x}{an object of class \code{gmnl} where \code{ranp} is not \code{NULL}.}
@@ -61,9 +60,6 @@ se.cov.gmnl(Elec.cor, sd = TRUE)
 cor.gmnl(Elec.cor)
 }
 }
-\author{
-Mauricio Sarrias \email{msarrias86@gmail.com}
-}
 \references{
 \itemize{
 \item Greene, W. H. (2012). Econometric Analysis, Seventh Edition. Pearson Hall.
@@ -73,4 +69,6 @@ Mauricio Sarrias \email{msarrias86@gmail.com}
 \seealso{
 \code{\link[gmnl]{gmnl}} for the estimation of different multinomial models with individual heterogeneity.
 }
-
+\author{
+Mauricio Sarrias \email{msarrias86@gmail.com}
+}
