@@ -24,4 +24,3 @@ For more information see \code{\link[sandwich]{estfun}} from package \pkg{sandwi
 Zeileis A (2006), Object-oriented Computation of Sandwich 
 Estimators. Journal of Statistical Software, 16(9), 1--16.
 }
-
