@@ -1,34 +1,63 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/gmnl.R, R/gmnl.methods.R
 \name{gmnl}
+\alias{gmnl}
+\alias{print.gmnl}
+\alias{summary.gmnl}
+\alias{print.summary.gmnl}
+\alias{update.gmnl}
 \alias{coef.gmnl}
+\alias{model.matrix.gmnl}
+\alias{residuals.gmnl}
 \alias{df.residual.gmnl}
 \alias{fitted.gmnl}
-\alias{gmnl}
 \alias{logLik.gmnl}
-\alias{model.matrix.gmnl}
 \alias{nObs.gmnl}
-\alias{print.gmnl}
-\alias{print.summary.gmnl}
-\alias{residuals.gmnl}
-\alias{summary.gmnl}
-\alias{update.gmnl}
 \title{Estimate Multinomial Logit Models with Observed and Unobserved Individual Heterogeneity.}
 \usage{
-gmnl(formula, data, subset, weights, na.action, model = c("mnl", "mixl",
-  "smnl", "gmnl", "lc", "mm"), start = NULL, ranp = NULL, R = 40, Q = 2,
-  haltons = NA, mvar = NULL, seed = 12345, correlation = FALSE,
-  bound.err = 2, panel = FALSE, hgamma = c("direct", "indirect"),
-  reflevel = NULL, init.tau = 0.1, init.gamma = 0.1, notscale = NULL,
-  print.init = FALSE, gradient = TRUE, typeR = TRUE, ...)
+gmnl(
+  formula,
+  data,
+  subset,
+  weights,
+  na.action,
+  model = c("mnl", "mixl", "smnl", "gmnl", "lc", "mm"),
+  start = NULL,
+  ranp = NULL,
+  R = 40,
+  Q = 2,
+  haltons = NA,
+  mvar = NULL,
+  seed = 12345,
+  correlation = FALSE,
+  bound.err = 2,
+  panel = FALSE,
+  hgamma = c("direct", "indirect"),
+  reflevel = NULL,
+  init.tau = 0.1,
+  init.gamma = 0.1,
+  notscale = NULL,
+  print.init = FALSE,
+  gradient = TRUE,
+  typeR = TRUE,
+  ...
+)
 
-\method{print}{gmnl}(x, digits = max(3, getOption("digits") - 3),
-  width = getOption("width"), ...)
+\method{print}{gmnl}(
+  x,
+  digits = max(3, getOption("digits") - 3),
+  width = getOption("width"),
+  ...
+)
 
 \method{summary}{gmnl}(object, ...)
 
-\method{print}{summary.gmnl}(x, digits = max(3, getOption("digits") - 2),
-  width = getOption("width"), ...)
+\method{print}{summary.gmnl}(
+  x,
+  digits = max(3, getOption("digits") - 2),
+  width = getOption("width"),
+  ...
+)
 
 \method{update}{gmnl}(object, new, ...)
 
@@ -232,9 +261,6 @@ Elec.mm <- gmnl(choice ~ pf + cl + loc + wk + tod + seas| 0 | 0 | 0 | 1,
 summary(Elec.mm)
 }
 }
-\author{
-Mauricio Sarrias \email{msarrias86@gmail.com}
-}
 \references{
 \itemize{
 \item Keane, M., & Wasi, N. (2013). Comparing alternative models of heterogeneity in consumer choice behavior. Journal of Applied Econometrics, 28(6), 1018-1045.
@@ -246,4 +272,6 @@ Mauricio Sarrias \email{msarrias86@gmail.com}
 \seealso{
 \code{\link[mlogit]{mlogit}}, \code{\link[mlogit]{mlogit.data}},  \code{\link[maxLik]{maxLik}}, \code{Rchoice}
 }
-
+\author{
+Mauricio Sarrias \email{msarrias86@gmail.com}
+}
